--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -2,7 +2,18 @@
 @use 'base/mixins' as m;
 
 .header{
+
     background-color: v.$verde;
+
+    @include m.tablet{
+        &.fixed{
+            position: fixed;
+            left: 0;
+            top: 0;
+            width: 100%;
+            box-shadow: .1rem .2rem .3rem #333;
+        }
+    }
 
     .contenido-header{
         padding: 2rem;
