--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -52,7 +52,8 @@
         color: v.$blanco;
         font-size: 2.4rem;
 
-        &:hover{
+        &:hover,
+        &.active{
             color: v.$amarillo;
         }
     }
